Changed game model to a  constructor

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 
     var totalGuesses = 8
 
-    game.newGame(availableWords, totalGuesses)
-
+    var game = new Game(availableWords, totalGuesses)
     var controller = new Controller(model = game, view = document)
     controller.updateDisplay()
   </script>
